# LicheeRVNanoV2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
projects/JpegBenchmark/: jpeg_hw.c  jpeg_hw.h  main.c
projects/StreamYolo/: main.c
projects/StreamYolo/include/: mw_setup.h  threads.h  venc_thread.h
projects/StreamYolo/src/: main.c  main.cpp  mw_setup.c  threads.c  threads.cpp
projects/YoloSegmentation/src/: segment_image.cpp
